prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/unrecognised_escape.nut
// EXPECT_ERROR: "unrecognised escape char"
let x = "\q"
